PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite 9.0.0-Asker
16 September 2019

pts-core: Add stress-batch-run sub-command for behavior like stress-run but no prompts for test options
pts-core: Allow plotting all individual run results as a line graph
pts-core: Allow showing pie charts of wins/losses of tests
pts-core: Add support for showing "new + updated tests" via the invalid command helper
pts-core: Allow accessing the new result viewer via localhost too rather than just 127.0.0.1
pts_Graph: Restore pie chart support from PTS 6.0 state when dropped

Phoronix Test Suite 9.0.0 Milestone 3
3 September 2019

pts-core: Add AllowResultUploadsToOpenBenchmarking user config option
pts-core: Split OpenBenchmarking.org upload code into pts_openbenchmarking_upload file and allow it to be removed if wanting to strip out upload support
pts-core: Add "ob-cache" local cache of tests/suites to help offline use-cases
pts-core: Add hdf5 to the external dependency list
pts-core: Add libxml2 to the external dependency list

Phoronix Test Suite 9.0.0 Milestone 2
22 August 2019

pts-core: New result viewer improvements
pts-core: Various fixes and code cleanups
phodevi: Add support for cpu.power sensor reading from Linux zenpower driver

Phoronix Test Suite 9.0.0 Milestone 1
25 July 2019

pts-core: Add 'expat' as possible external dependency
pts-core: Various PDF report improvements
pts-core: User-config syntax change LoadModules -> AutoLoadModules
pts-core: Also dynamically increase run count if any results outside 3-sigma limit
pts-core: Add compare-results-two-way sub-command
pts-core: Improve MultiMatch in test result parser
pts-core: Add IGNORE_RUNS environment variable
pts-core: Add result-file-confidence sub-command
pts_Graph: Add side-by-side 2-way comparison graph
pts_Graph: Fix for displaying line graphs with very small values
phodevi: Support reading sys.power via IPMI PS1_Input_Power/PS2_Input_Power
phodevi: More robust Arm CPU model detection improvements