@@ -279,7 +279,7 @@ function pts_version_codenames()
 }
 
 pts_define('PTS_VERSION', '9.0.0');
-pts_define('PTS_CORE_VERSION', 9000);
+pts_define('PTS_CORE_VERSION', 9001);
 pts_define('PTS_RELEASE_DATE', '20190916');
 pts_define('PTS_CODENAME', 'Asker');
 
